@@ -18,14 +18,14 @@ MD5 f1c9cf5c02a9eb77d6793099cb472c8d files/buildslave.confd 215
 RMD160 ffe7545a43c10a9f3e9798f23ba6a32ab47c137b files/buildslave.confd 215
 SHA256 5d0ab58d0808ccfa2d594b22047dfca9167c855ff749d34523177cefb307f76a files/buildslave.confd 215
 DIST buildbot-0.7.4.tar.gz 862827 RMD160 8b7ec0dd615209b5ab976cb2da195249ce147189 SHA1 d661b0058188ed92cc7ae8e8b0a76704d7581ca5 SHA256 d9b1ff5bfcf746be348d75096e9a4824b9b6f02eccdc8b53402d3944898c298e
-EBUILD buildbot-0.7.4.ebuild 2238 RMD160 5e6621746047c7d53c0d05775fcca4c771e304d8 SHA1 16603be9fca5d2c01a87dc7418f6fe8702f27ed8 SHA256 8fe82c172785352198b8bbb7561f5f34743585d56c0525435513a69f2129877c
-MD5 66aeac0139ec8d5ede399e966aa88a65 buildbot-0.7.4.ebuild 2238
-RMD160 5e6621746047c7d53c0d05775fcca4c771e304d8 buildbot-0.7.4.ebuild 2238
-SHA256 8fe82c172785352198b8bbb7561f5f34743585d56c0525435513a69f2129877c buildbot-0.7.4.ebuild 2238
-MISC ChangeLog 544 RMD160 a4a2634ae7f03e9ad073aa64962f3075a54299b2 SHA1 7db484b1d55f64e257ab5e62dc79f9009671cb7b SHA256 4a97999c9432801fba06deb17a2d3db2646f155b949b26c73e302a7b25d4d0a6
-MD5 92f1446335cb643ebf90507d08f702d3 ChangeLog 544
-RMD160 a4a2634ae7f03e9ad073aa64962f3075a54299b2 ChangeLog 544
-SHA256 4a97999c9432801fba06deb17a2d3db2646f155b949b26c73e302a7b25d4d0a6 ChangeLog 544
+EBUILD buildbot-0.7.4.ebuild 2269 RMD160 c87576374a7927c7c53a7eebb6b157fa80ef53f2 SHA1 67477206845a03aa159b7d72309f3aafdb22d62a SHA256 8b79a05afed73f298dc6c1a686d7e0a9db287b9cc93d0600b65064ed1e911511
+MD5 3ae1aa54c08254b8286b3ab56efbf854 buildbot-0.7.4.ebuild 2269
+RMD160 c87576374a7927c7c53a7eebb6b157fa80ef53f2 buildbot-0.7.4.ebuild 2269
+SHA256 8b79a05afed73f298dc6c1a686d7e0a9db287b9cc93d0600b65064ed1e911511 buildbot-0.7.4.ebuild 2269
+MISC ChangeLog 780 RMD160 b7ceee6dc62613068fdbd8fed624c81b0dad3405 SHA1 f777aa5f59ac6dc0183417810dc2fe588a69f65d SHA256 5e11b083438fef6058df771b5dd223751fb36240e7a887056b0faa084c9fe960
+MD5 0d99c6eb3dcb4140166655c52cee6b56 ChangeLog 780
+RMD160 b7ceee6dc62613068fdbd8fed624c81b0dad3405 ChangeLog 780
+SHA256 5e11b083438fef6058df771b5dd223751fb36240e7a887056b0faa084c9fe960 ChangeLog 780
 MISC metadata.xml 958 RMD160 9d7be621968219470c6fb4e66c55e91d3d7765b6 SHA1 d8a978793941a2a566dcbc9364d09e22ae54d256 SHA256 f61483b7976a1fc93cda8f8cc6d23e744f8f3ae765b385d35246be3a2ef87d76
 MD5 374d908b2008bc1082871d993dd850b8 metadata.xml 958
 RMD160 9d7be621968219470c6fb4e66c55e91d3d7765b6 metadata.xml 958
@@ -36,7 +36,7 @@ SHA256 4155c34310889f8ffb5cc8a610a6bfb7c8eeb7d13fbaf3553c963d1fd6347d96 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.5 (GNU/Linux)
 
-iD8DBQFFGBUWUElL7eJpfEQRAsgZAJ9W2SgGFg3OUAxCFGHr3DCyn7803QCfRxwd
-gaKpm26rh5FF25mfTzt1NDU=
-=VHAz
+iD8DBQFFRkH4UElL7eJpfEQRAuDFAJwLNbThgIDmpOtEmTOrnYUroWHKcACglNHU
+DdnttbfgKU8ByVDn4eJ7QrQ=
+=YnEu
 -----END PGP SIGNATURE-----
