@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/buildbot
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/buildbot/ChangeLog,v 1.1 2006/09/25 17:42:37 marienz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/buildbot/ChangeLog,v 1.2 2006/10/30 18:18:26 marienz Exp $
+
+  30 Oct 2006; Marien Zwart <marienz@gentoo.org> buildbot-0.7.4.ebuild:
+  Use the workdir copy of buildbot for epydoc and trial, not the installed
+  one. Fixes bug #153440, thanks to David Stutzman <gentoo@dstutz.com> for
+  reporting.
 
 *buildbot-0.7.4 (25 Sep 2006)
 
